2010-01-19  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        validate-committer-lists throws exception and committers.py needs a refresh
        https://bugs.webkit.org/show_bug.cgi?id=33831

        * Scripts/validate-committer-lists: use webkit_logging
        * Scripts/webkitpy/committers.py: Add recently minted committers.  Fix Simon Hausmanns email address list to include his webkit-committers@lists address.

2010-01-18  Adam Roben  <aroben@apple.com>

        Add LayoutTestController support for calling new WebKit SPI to
        disallow setting document.domain

        DRT part of fixing <http://webkit.org/b/33806>
        <rdar://problem/7552837> Would like API to disallow setting of
        document.domain for pages with certain URL schemes

        Reviewed by Sam Weinig.

        * DumpRenderTree/LayoutTestController.cpp:
        (setDomainRelaxationForbiddenForURLSchemeCallback): Added. Calls
        through to LayoutTestController.
        (LayoutTestController::staticFunctions): Added
        setDomainRelaxationForbiddenForURLScheme.

        * DumpRenderTree/LayoutTestController.h: Added
        setDomainRelaxationForbiddenForURLScheme.

        * DumpRenderTree/mac/LayoutTestControllerMac.mm:
        (LayoutTestController::setDomainRelaxationForbiddenForURLScheme):
        * DumpRenderTree/win/LayoutTestControllerWin.cpp:
        (LayoutTestController::setDomainRelaxationForbiddenForURLScheme):
        Added. Calls through to WebKit.

        * DumpRenderTree/gtk/LayoutTestControllerGtk.cpp:
        (LayoutTestController::setDomainRelaxationForbiddenForURLScheme):
        * DumpRenderTree/wx/LayoutTestControllerWx.cpp:
        (LayoutTestController::setDomainRelaxationForbiddenForURLScheme):
        Stubbed out.

2010-01-18  Adam Barth  <abarth@webkit.org>

        Reviewed by Adam Roben.

        Rename patches-to-commit to patches-in-commit-queue
        https://bugs.webkit.org/show_bug.cgi?id=33789
