@@ -1,3 +1,12 @@
+2010-01-19  Adam Barth  <abarth@webkit.org>
+
+        Reviewed by Eric Seidel.
+
+        Unbreak --request-commit
+        https://bugs.webkit.org/show_bug.cgi?id=33832
+
+        * Scripts/webkitpy/bugzilla.py:
+
 2010-01-19  Eric Seidel  <eric@webkit.org>
 
         Reviewed by Adam Barth.
